force-app/main/default/objects/ASF_Lead_Stage_Substage_Master__mdt/ASF_Lead_Stage_Substage_Master__mdt.object-meta.xml
<CustomObject>
    <label>ASF Lead Stage Substage Master</label>
    <pluralLabel>ASF Lead Stage Substage Masters</pluralLabel>
</CustomObject>