force-app/main/default/objects/ASF_Lead_Stage_Substage_Master__mdt/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABSLI</fullName>
                <default>true</default>
                <label>ABSLI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>