force-app/main/default/objects/ASF_Lead_Stage_Substage_Master__mdt/fields/ShowAsUnique__c.field-meta.xml
<CustomField>
    <fullName>ShowAsUnique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowAsUnique</label>
    <type>Checkbox</type>
</CustomField>