force-app/main/default/objects/ASF_Lead_Stage_Substage_Master__mdt/fields/SubStage__c.field-meta.xml
<CustomField>
    <fullName>SubStage__c</fullName>
    <label>SubStage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>